<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Configuration</string>
    <string name="menu_import">Import settings</string>
    <string name="menu_export">Export settings</string>
    <string name="menu_about">About</string>
    <string name="status_init">Ready</string>
    <string name="title_bt_launch">Sync with EAA Cloud</string>
    <string name="title_bt_show">Show EAAInfo</string>
    <string name="title_bt_save">Store EAAInfo</string>
    <string name="title_activity_ocsconfig">Settings</string>
    <string name="ocs_ng">EAAAInfo</string>
    <string name="title_activity_show_inventory">EAAInfo</string>
    <string name="state_saved">EAAInfo recorded on sdcard</string>
    <string name="state_send_prolog">Sending prolog to server</string>
    <string name="state_send_inventory">Sending EAAInfo to server</string>
    <string name="state_sent_inventory">EAAInfo sent</string>
    <string name="state_send_error">Transmission Error</string>
    <string name="state_send_start">Transmission</string>
    <string name="state_build_inventory">EAAInfo in progress</string>
    <string name="nty_inventory_sent">EAAInfo sent to EAA server</string>
    <string name="nty_downloads">Downloaded packages availables</string>

    <string name="nty_title">EAA-NG notification</string>
    <string name="msg_conf_exported">Settings exported</string>
    <string name="msg_conf_imported">Settings imported</string>
    <string name="unit_hour">hours</string>
    <string name="unit_minutes">minutes</string>
    <string name="title_activity_ocslaunch">Installation</string>
    <string name="err_cant_connect">Unable to connect to : </string>
    <string name="start_download_service">Start package update service</string>

</resources>