<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <!-- Overflow (...) -->
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/menu_settings"
        yourapp:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_sysbar_quicksettings"
                android:title="@string/menu_settings"
                yourapp:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_about"
                android:icon="@drawable/ic_menu_info_details"
                android:title="@string/menu_about"
                yourapp:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_import"
                android:icon="@drawable/ic_menu_goto"
                android:title="@string/menu_import"
                yourapp:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_export"
                android:icon="@drawable/ic_menu_set_as"
                android:title="@string/menu_export"
                yourapp:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>