<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/id_agent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|fill"
                android:orientation="vertical">

    <TextView
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/status_init"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btSendInventory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="102dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/ocs_landscape"/>

    <Button
        android:id="@+id/btSendInventory"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_effect"
        android:text="@string/title_bt_launch"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btSaveInventory"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btShowInventory"
        android:layout_alignStart="@+id/btShowInventory"
        android:layout_below="@+id/btShowInventory"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_effect"
        android:text="@string/title_bt_save"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btShowInventory"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btSendInventory"
        android:layout_alignStart="@+id/btSendInventory"
        android:layout_below="@+id/btSendInventory"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_effect"
        android:text="@string/title_bt_show"
        android:textColor="@color/white"/>

</RelativeLayout>